# jaws

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/jose/: algorithm.md  certificate_chain.md  certificate_url.md  content_type.md  critical.md  json_web_key.md  jwk_set_url.md  key_id.md  thumbprint.md  thumbprint_sha256.md  type.md
examples/: acme-new-account.rs  dyn-key.rs  rfc7515a2.rs  save-key.rs  simple-jwt.rs
src/: b64data.rs  base64data.rs  claims.rs  fmt.rs  jose.rs  key.rs  lib.rs  numeric_date.rs  signing.rs  token.rs
src/algorithms/: ecdsa.rs  hmac.rs  mod.rs  rsa.rs  sig.rs
src/jose/: derive.rs  mod.rs  rendered.rs  signed.rs  unsigned.rs
src/token/: formats.rs  mod.rs  state.rs
tests/: dyn-rsa-key.rs
