[package]
name = "jaws"
version = "0.7.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/jaws"
description = "JSON Algorithms and Web Signing"
keywords = ["https", "networking", "tls"]
categories = [
    "cryptography",
    "network-programming",
    "web-programming::http-server",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
bytes = { version = "1.5" }
chrono = { version = "0.4.24", features = ["serde"] }
elliptic-curve = { version = "0.13.4", features = [
    "pkcs8",
    "jwk",
    "arithmetic",
    "sec1",
    "alloc",
    "std",
    "ecdh",
], optional = true }
digest = { version = "0.10.6" }
pkcs8 = "0.10.2"
rsa = { version = "0.8.2", features = ["sha2"], optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha1 = "0.10.5"
sha2 = "0.10.6"
signature = { version = "2.1.0", features = ["std", "digest"] }
thiserror = "1.0.40"
url = { version = "2.3.1", features = ["serde"] }
zeroize = { version = "1.6.0", features = ["std", "serde", "derive"] }
p256 = { version = "0.13.1", features = [
    "ecdsa",
    "jwk",
    "std",
], optional = true }
ecdsa = { version = "0.16.6", features = [
    "signing",
    "std",
    "der",
], optional = true }
p384 = { version = "0.13.0", optional = true }
p521 = { version = "0.13.0", optional = true }
hmac = { version = "0.12.1", features = ["reset"], optional = true }

[features]
default = ["fmt", "rsa", "ecdsa", "p256", "p384", "p521", "hmac"]
fmt = []
rsa = ["dep:rsa"]
hmac = ["dep:hmac"]
ecdsa = ["dep:ecdsa", "dep:elliptic-curve"]
p256 = ["dep:p256", "ecdsa"]
p384 = ["dep:p384", "ecdsa"]
p521 = ["dep:p521", "ecdsa"]

[[example]]
name = "acme-new-account"
path = "examples/acme-new-account.rs"
required-features = ["fmt", "rsa"]

[[example]]
name = "rfc7515-a2"
path = "examples/rfc7515a2.rs"
required-features = ["fmt", "rsa"]

[[example]]
name = "save-key"
path = "examples/save-key.rs"
required-features = ["fmt", "rsa"]
