[package]
name = "jaws"
version = "0.9.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/jaws"
description = "JSON Algorithms and Web Signing"
keywords = ["https", "networking", "tls"]
categories = [
    "cryptography",
    "network-programming",
    "web-programming::http-server",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6", features = ["std"] }
bytes = { version = "1.5" }
chrono = { version = "0.4", features = ["serde"] }
digest = { version = "0.10" }
ecdsa = { version = "0.16", features = ["signing", "der"], optional = true }
hmac = { version = "0.12", optional = true }
p256 = { version = "0.13", features = ["ecdsa", "jwk"], optional = true }
p384 = { version = "0.13", optional = true }
p521 = { version = "0.13", optional = true }
pkcs8 = "0.10"
rsa = { version = "0.9", features = ["sha2"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
signature = { version = "2.2", features = ["digest", "std"] }
thiserror = "1"
url = { version = "2.5", features = ["serde"] }
zeroize = { version = "1.7", features = ["serde", "derive"] }

[dependencies.elliptic-curve]
version = "0.13"
features = ["pkcs8", "jwk", "arithmetic", "sec1", "ecdh"]
optional = true

[dev-dependencies]
static_assertions = "1.1.0"

[features]
default = ["fmt", "rsa", "ecdsa", "p256", "p384", "p521", "hmac"]
fmt = []
rsa = ["dep:rsa"]
hmac = ["dep:hmac"]
ecdsa = ["dep:ecdsa", "dep:elliptic-curve"]
p256 = ["dep:p256", "ecdsa"]
p384 = ["dep:p384", "ecdsa"]
p521 = ["dep:p521", "ecdsa"]

[[example]]
name = "acme-new-account"
path = "examples/acme-new-account.rs"
required-features = ["fmt", "rsa"]

[[example]]
name = "rfc7515-a2"
path = "examples/rfc7515a2.rs"
required-features = ["fmt", "rsa"]

[[example]]
name = "dyn-key"
path = "examples/dyn-key.rs"
required-features = ["fmt", "rsa"]


[[example]]
name = "save-key"
path = "examples/save-key.rs"
required-features = ["fmt", "rsa"]

[[test]]
name = "dyn-rsa-key"
path = "tests/dyn-rsa-key.rs"
required-features = ["fmt", "rsa"]
